--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ body{
   font-family: "Barlow Semi Condensed", sans-serif;
   font-size: var(--main-font-size);
 }
+.container{
+  min-height: 50vh;
+}
 h4, .img-text p{
   font-weight: 600;
 }
@@ -124,7 +127,76 @@ h4{
 }
 
 
-@media (min-width: 750px){
+@media (min-width: 750px) and (max-width: 1000px){
+  .container{
+    padding: 5em 3em;
+  }
+  .main-div{
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, 2fr);
+    gap: 2em;
+  }
+  section{
+    padding: 1.5em 1.5em 1.5em 1.5em;
+    margin-bottom: 0;
+  }
+  .quote-img{
+    width: 30%;
+    border: none;
+    border-radius: 0px;
+    position: absolute;
+    right: 4em;
+    opacity: 0.8;
+  }
+  .flex-div{
+    align-items: center;
+  }
+  .one{
+    grid-column: 1/3;
+  }
+  .two{
+    grid-column: 3/4;
+  }
+  .three{
+    grid-column: 1/2;
+    grid-row: 2/4;
+  }
+  .four{
+    grid-column: 2/4;
+    grid-row: 2/4;
+  }
+  .five{
+    grid-column: 4/5;
+    grid-row: 1/4;
+  }
+   .one .img-div, .four .img-div{
+    width: 10%;
+  }
+  .two .img-div, .three .img-div{
+    width: 50%;
+  }
+  .five .img-div{
+    width: 20%;
+  }
+  h4{
+    margin-bottom: 1em;
+    font-size: 1.3rem;
+  }
+  .three h4{
+    font-size: 1.rem;
+  }
+  .five h4{
+    font-size: 1.3rem;
+  }
+  .quote{
+    line-height: 1.3em;
+  }
+  .quote-black{
+    line-height: 1.3em;
+  }
+}
+@media (min-width: 1000px){
   .container{
     padding: 5em 3em;
   }
